Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ Currently learning Node.js to expand backend capabilities.
           <div class="detail-icon">✉️</div>
           <div class="detail-text">
             <strong>Email</strong>
-            ahrar.0932@gmail.com
+            usaidrazakhi@gmail.com
           </div>
         </div>
 
@@ -252,7 +252,7 @@ Currently learning Node.js to expand backend capabilities.
           <div class="detail-icon">📞</div>
           <div class="detail-text">
             <strong>Phone</strong>
-            +92 300 9289796
+            +92 3136954595
           </div>
         </div>
 
@@ -374,4 +374,5 @@ document.querySelectorAll(".linkeds a").forEach(link => {
 
 </script>
 </body>
+
 </html>
